Added SonarQube and Swagger/openapi
added dependencies to enable sonarqube
added dependencies to enabel swagger/openapi